# lecture-buddy

./: README.md  app.py  main.py  pyproject.toml  requirements.txt
modules/: embedder.py  generator.py  retriever.py  transcriber.py
static/: main.js  style.css
templates/: index.html
